fix: color for button on mobile devices

--- a/components/UI/Button.module.css
+++ b/components/UI/Button.module.css
@@ -3,6 +3,7 @@
   height: 50px;
   cursor: pointer;
   background-color: beige;
+  color: #000;
   font-size: 1.5rem;
   padding: 10px 15px;
   border: none;
